# zopyx.jsonata

./: .gitignore  Cargo.toml  Makefile  README.md  justfile  pyproject.toml  pytest.ini  rust-toolchain.toml
.github/workflows/: ci.yml  release-plz.yml  rust.yaml  scorecard.yml  validate-renovate-config.yml
python/zopyx/: __init__.py
python/zopyx/pyjsonata/: __init__.py
python_tests/: test_testsuite.py
src/: datetime.rs  lib.rs  python.rs
src/evaluator/: value.rs
src/parser/: process.rs
