[package]
name = "jsonata-rs"
version = "0.3.4"
edition = "2021"
license = "Apache-2.0"
authors = ["Stedi"]
description = "An (incomplete) implementation of JSONata in Rust"
homepage = "https://github.com/Stedi/jsonata-rs/"
repository = "https://github.com/Stedi/jsonata-rs/"
keywords = ["jsonata", "json"]
categories = ["command-line-utilities", "compilers", "parser-implementations"]

[lib]
name = "jsonata_rs"
crate-type = ["rlib", "cdylib"]

[features]
python = ["pyo3"]

[dependencies]
base64 = "0.22.1"
bitflags = "2.5.0"
bumpalo = { version = "3.16.0", features = [
    "collections",
    "boxed",
    "allocator-api2",
] }
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
dtoa = "1.0.9"
hashbrown = "0.15.0"
num-format = "0.4.4"
pyo3 = { version = "0.22.5", features = ["extension-module"], optional = true }
rand = "0.9.0"
regress = "0.10.1"
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["fast-rng", "v4", "v7"] }

[build-dependencies]
glob = "0.3"

[dev-dependencies]
regress = "=0.10.3"
test-case = "=3.3.1"
test-generator = "=0.3.1"
